# satway-build-info

./: Cargo.toml  README.md  release.sh
src/: compile_info.rs  lib.rs
src/compile/: compile_info.rs  mod.rs
