[package]
name = "satway_build"
version = "0.1.7"
edition = "2021"
authors = ["zhangjianshe <zhangjianshe@gmail.com>"]
license = "MIT OR Apache-2.0"
publish = true
description = "provide a build information extract for build.rs script"
homepage = "https://github.com/zhangjianshe/satway-build-info.git"
keywords = ["build","git","build-info","satway"]
[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
chrono = "0.4.39"
