[package]
name = "satway_build"
version = "0.1.18"
repository = "https://github.com/zhangjianshe/satway-build-info.git"
edition = "2021"
authors = ["zhangjianshe <zhangjianshe@gmail.com>"]
license = "MIT"
publish = true
description = "provide build information for rust application"
homepage = "https://github.com/zhangjianshe/satway-build-info.git"
keywords = ["build-utils","build","git","build-info","satway"]
[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
chrono = "0.4.39"
